# Talentdashjob

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: _mock_data.py  index.py  requirements.txt
deploy/: Dockerfile  docker-compose.yml
docs/: MOBILE_API.md  VERCEL_DEPLOY.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/data/: bundle.json
frontend/scripts/: generate-static-data.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/context/: CompareContext.tsx
frontend/src/hooks/: useAnalytics.ts  useCompanies.ts  useCompareSalaries.ts  useSalaries.ts
frontend/src/lib/: api.ts  chart-theme.ts  compare-store.ts  compare-utils.test.ts  compare-utils.ts  format.ts  static-api.ts  types.ts
frontend/src/pages/: CompaniesPage.tsx  CompanyDetailPage.tsx  ComparePage.tsx  ExplorePage.tsx  InsightsPage.tsx  LandingPage.tsx
prisma/: schema.prisma
scripts/: export_static_bundle.py  export_static_bundle_wrapper.mjs  run_pipeline.ps1  run_scraper.py  seed_sample_data.py  start_api.ps1  start_dev.ps1  start_frontend.ps1
src/talentdash/: __init__.py
tests/: conftest.py
tests/integration/: test_pipeline_offline.py
tests/unit/: test_analytics.py  test_compare_endpoint.py  test_confidence_scorer.py  test_dedupe_hash.py  test_level_mapper.py  test_public_formatting.py  test_salary_parser.py  test_validation.py
web/: app.js  index.html  manifest.json  styles.css
(+96 files in other folders)
