[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talentdash"
version = "0.1.0"
description = "India-first compensation intelligence ingestion platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "prisma>=0.15.0",
    "openai>=1.54.0",
    "playwright>=1.48.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "redis>=5.2.0",
    "rapidfuzz>=3.10.0",
    "pyyaml>=6.0.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
